Solve unified logging tasks